@@ -239,6 +239,7 @@ vips_histogram_operation_init( void )
 	extern GType vips_hist_plot_get_type( void ); 
 	extern GType vips_hist_match_get_type( void ); 
 	extern GType vips_hist_local_get_type( void ); 
+	extern GType vips_hist_percent_get_type( void ); 
 	extern GType vips_stdif_get_type( void ); 
 
 	vips_maplut_get_type(); 
@@ -248,5 +249,6 @@ vips_histogram_operation_init( void )
 	vips_hist_plot_get_type(); 
 	vips_hist_match_get_type(); 
 	vips_hist_local_get_type(); 
+	vips_hist_percent_get_type(); 
 	vips_stdif_get_type(); 
 }
